fixed images not stretching on home page

--- a/views/css/Styles.css
+++ b/views/css/Styles.css
@@ -178,6 +178,7 @@ br{
         left: 32%;
     }
     .welcomeHeader{
+        margin-right: 40%;
         position: relative;
         left: 11%;
         top: 7%;
